# ZozQuick

./: .gitignore  CMakeLists.txt  README.md
src/: WizardDemo.qml  ZozDemo.qml  main.cpp  main.qml  qml.qrc
src/cpp/: RegisterQmlType.h
src/cpp/FingerCurve/: fingercurve.cpp  fingercurve.h  fingercurveb.cpp  fingercurveb.h
src/cpp/Http/: ZHttp.h
src/cpp/PageListView/: ZPageListView.cpp  ZPageListView.h
src/cpp/QNanoPainter/: CMakeLists.txt  libQNanoPainterData.qrc  qnanoboxgradient.cpp  qnanoboxgradient.h  qnanocolor.cpp  qnanocolor.h  qnanofont.cpp  qnanofont.h  qnanoimage.cpp  qnanoimage.h  qnanoimagepattern.cpp  qnanoimagepattern.h  qnanolineargradient.cpp  qnanolineargradient.h  qnanopainter.cpp  qnanopainter.h  qnanoquickitem.cpp  qnanoquickitem.h  qnanoquickitempainter.cpp  qnanoquickitempainter.h  qnanoradialgradient.cpp  qnanoradialgradient.h  qnanowidget.cpp  qnanowidget.h  qnanowindow.cpp  qnanowindow.h
src/cpp/QNanoPainter/data/: README.txt
src/cpp/QNanoPainter/ext/GLES3/: gl3.h
src/cpp/QNanoPainter/nanovg/: fontstash.h  nanovg.c  nanovg.h  nanovg_gl.h  nanovg_gl_wrapped.h
src/cpp/QNanoPainter/private/: qnanobackend.h  qnanobackendfactory.h  qnanobackendgl2.cpp  qnanobackendgl2.h  qnanobackendgl3.cpp  qnanobackendgl3.h  qnanobackendgles2.cpp  qnanobackendgles2.h  qnanobackendgles3.cpp  qnanobackendgles3.h  qnanobrush.h  qnanodataelement.h  qnanodebug.cpp  qnanodebug.h
src/cpp/Wizard/: ZWizardFramework.cpp  ZWizardFramework.h
src/qml/: ZImageReflectionA.qml  ZInnerShadow.qml  ZObject.qml  ZRollTextA.qml  ZRoundImageA.qml  component.qrc
src/qml/animation/: LoadingA.qml
src/qml/qrcode/: ZQrcodeImage.qml  qrious.js
